--- a/web/templates/clusters.html
+++ b/web/templates/clusters.html
@@ -2,6 +2,7 @@
 
 {% block title %}{{ t['cls_title'] }} - {{ t['app_title'] }}{% endblock %}
 {% block page_title %}{{ t['cls_title'] }}{% endblock %}
+{% block page_subtitle %}{{ t['sub_clusters'] }}{% endblock %}
 
 {% block header_actions %}
 <button class="btn btn-primary" onclick="loadClusters()">{{ t['btn_refresh'] }}</button>
