--- a/web/templates/routes.html
+++ b/web/templates/routes.html
@@ -2,6 +2,7 @@
 
 {% block title %}{{ t['rte_title'] }} - {{ t['app_title'] }}{% endblock %}
 {% block page_title %}{{ t['rte_title'] }}{% endblock %}
+{% block page_subtitle %}{{ t['sub_routes'] }}{% endblock %}
 
 {% block head %}
 <link rel="stylesheet" href="https://unpkg.com/leaflet-routing-machine@3.2.12/dist/leaflet-routing-machine.css" />
